update for recent chrome version

--- a/Symfony2ListTemplates/popup.html
+++ b/Symfony2ListTemplates/popup.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="popup.js"></script>
 <style>
 body {
   margin: 0;
@@ -20,46 +21,9 @@ body {
   padding: 3px 0;
   border-bottom: dashed 1px #E1E1E1;
 }
-
 </style>
 <body>
 
 <div id="templates"></div>
 
-<script>
-
-var renderTemplates = function(templates) {
-  var container = document.getElementById('templates'), ul, li;
-  container.innerHTML = '';
-  if (templates.length) {
-    ul = document.createElement('ul');
-    templates.forEach(function(template, i) {
-      li = document.createElement('li');
-      li.innerHTML = template;
-      ul.appendChild(li);
-    });
-    container.appendChild(ul);
-  } else {
-    container.innerHTML = 'Templates not found.';
-  }
-};
-
-var getTemplates = function() {
-  chrome.tabs.getSelected(null, function(tab) {
-    chrome.tabs.sendRequest(tab.id, {type: 'templates'}, function(response) {
-      renderTemplates(response.templates);
-    });
-  });
-};
-
-
-chrome.extension.onRequest.addListener(function(request, sender, callback) {
-  if (request.id === 'templates') {
-    renderTemplates(request.templates);
-  }
-});
-
-getTemplates();
-
-</script>
 </body>
